src/Korobi/WebBundle/Resources/assets/sass/application/base/_footer.scss
// Thanks mystrdat

html {
  position: relative;
  min-height: 100%;
}

body {
  margin: 0;
  min-height: 100%;
}

footer.footer {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  background-color: $footerBackgroundColour;
  box-shadow: $footerShadow;

  div.footer--inner {
    @include outer-container;
    height: $footerHeight;
    line-height: $footerHeight;
  }
}

footer.footer.footer--debug {
  bottom: 38px;
}

.footer--copyright {
  display: inline-block;
  float: left;
  color: $footerColor;
  margin-bottom: 0;
}

.footer--revision {
  display: inline-block;
}

@media (max-width: $medium-screen) {
  .footer--revision {
    display: none;
  }

  .sf-minitoolbar {
    // it overlaps with the footer links, sadly
    display: none !important;
  }
}

@mixin active-footer-link {
  color: #fff;
  background-color: darken($footerBackgroundColour, 10%);
}

ul.footer--links {
  display: inline-block;
  float: right;

  li + li {
    //margin-left: 0.8em;
  }

  li {
    display: inline-block;

    a {
      color: $footerColor;
      @include transition(all 0.3s);
      line-height: $footerHeight;
      display: block;
      padding: 0 1em 0 1em;
    }

    a:hover,
    a:focus {
      @include active-footer-link
    }
  }

  li.active a {
    @include active-footer-link
  }
}

